resources/kubectl/keymanweb-kubectl-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: web-keyman-com
  name: web-keyman-com
  namespace: keyman
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    nodePort: 30080
  - name: api
    port: 9000
    protocol: TCP
    nodePort: 30900
  selector:
    app: web-keyman-com
