resources/kubectl/keymanweb-kubectl-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-keyman-com
  name: web-keyman-com
  namespace: keyman
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: api
    port: 9000
    protocol: TCP
  selector:
    app: web-keyman-com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-keyman-com
  namespace: keyman
spec:
  rules:
  - host: keymanweb-staging.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-keyman-com
            port:
              name: http
      - path: /api/deploy
        pathType: Exact
        backend:
          service:
            name: web-keyman-com
            port:
              name: api
  - host: com-keyman-web.languagetechnology.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-keyman-com
            port:
              name: http
      - path: /api/deploy
        pathType: Exact
        backend:
          service:
            name: web-keyman-com
            port:
              name: api
  tls:
    - hosts:
        - keymanweb-staging.com
      secretName: keymanweb-staging-com
